[gd_scene load_steps=7 format=2]

[ext_resource path="res://gui/TiaoLetter.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://gui/PauseMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1024, 600 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.270588, 0.160784, 0.247059, 0.878431 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -130.5
margin_top = -79.0
margin_right = 130.5
margin_bottom = 79.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PausedLabel" type="Label" parent="VBoxContainer"]
margin_right = 261.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 1 )
text = "Paused"
align = 1

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
margin_top = 69.0
margin_right = 261.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 5 )
text = "Resume"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" type="Button" parent="VBoxContainer"]
margin_top = 100.0
margin_right = 261.0
margin_bottom = 127.0
custom_fonts/font = SubResource( 3 )
text = "Main Menu"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="VBoxContainer"]
margin_top = 131.0
margin_right = 261.0
margin_bottom = 158.0
custom_fonts/font = SubResource( 4 )
text = "Exit Game"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
